[package]
name = "quinine"
version = "0.2.0"
description = "Atomic monotonic containers (Mono{Box,Arc})"
keywords = ["atomic", "monotonic", "Arc", "Box", "container"]
categories = ["concurrency", "data-structures", "memory-management"]
repository = "https://github.com/pkhuong/quinine"
license = "Apache-2.0/MIT"
edition = "2018"

[features]
default = []
# We don't need std yet.
std = []

[dependencies]
